force-app/main/default/objects/Unsubscription__c/Unsubscription__c.object-meta.xml
<CustomObject>
    <description>[i2sema] 수신거부 마스터</description>
    <label>Unsubscriptions</label>
    <nameField>
        <displayFormat>NU{yyyyMMdd}{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Unsubscriptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>