force-app/main/default/objects/Unsubscription__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>차단 해제 여부
차단 : true / 해제 : false</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>