force-app/main/default/objects/Unsubscription__c/fields/ExtID__c.field-meta.xml
<CustomField>
    <fullName>ExtID__c</fullName>
    <description>External Id  (고객 전화번호)</description>
    <externalId>true</externalId>
    <label>ExtID</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>