force-app/main/default/objects/Unsubscription__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>Block Phone Number</description>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>