force-app/main/default/objects/Unsubscription__c/fields/RegiestedDate__c.field-meta.xml
<CustomField>
    <fullName>RegiestedDate__c</fullName>
    <description>차단등록 일 (서버일자)</description>
    <label>Regiested Date</label>
    <type>DateTime</type>
</CustomField>