force-app/main/default/objects/Unsubscription__c/fields/ReleasedDate__c.field-meta.xml
<CustomField>
    <fullName>ReleasedDate__c</fullName>
    <description>차단 해제 일 (서버일자)</description>
    <label>Released Date</label>
    <type>DateTime</type>
</CustomField>