force-app/main/default/objects/Unsubscription__c/fields/SpamNumber__c.field-meta.xml
<CustomField>
    <fullName>SpamNumber__c</fullName>
    <description>차단 요청을 받는 080 전화번호 정보</description>
    <label>Spam Number</label>
    <type>Phone</type>
</CustomField>