force-app/main/default/objects/Unsubscription__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Phone__c</columns>
    <columns>RegiestedDate__c</columns>
    <columns>ReleasedDate__c</columns>
    <columns>SpamNumber__c</columns>
    <columns>ExtID__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>